--- a/frontend/src/styles/Account.css
+++ b/frontend/src/styles/Account.css
@@ -1,19 +1,19 @@
-* {
+.AccountPage {
     font-family: 'Unna', serif;
     font-weight: 400;
 }
 
-a {
+.AccountPage a {
     color: darkblue;
     text-decoration: none;
 }
 
 
-.backgroundEffect {
+.AccountPage .backgroundEffect {
     background-color: darkblue;
     display: flex;
 }
-.info {
+.AccountPage .info {
     grid-area: info;
     display: flex;
     flex-direction: row;
@@ -21,27 +21,27 @@ a {
     flex: auto;
 }
 
-.countryPhone{
+.AccountPage .countryPhone{
     grid-area: countryPhone;
     display: flex;
     flex-direction: row;
     width: 100%;
     flex: auto;
 }
-.FLName{
+.AccountPage .FLName{
     grid-area: FLName;
     display: flex;
     flex-direction: row;
     width: 100%;
     flex: auto;
 }
-.countryCode{
+.AccountPage .countryCode{
     width:50%;
 }
-.phoneNumber{
+.AccountPage .phoneNumber{
     width:50%;
 }
-#pCode{
+.AccountPage #pCode{
     white-space: nowrap;
 }
 
@@ -56,11 +56,11 @@ a {
     grid-template-rows: 1fr 1fr;
 }
 
-.profileSide {
+.AccountPage .profileSide {
     grid-column: 1;
 }
 
-.profileToolBar {
+.AccountPage .profileToolBar {
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
@@ -70,7 +70,7 @@ a {
     border-bottom: solid black 2px;
 }
 
-.standardLayout {
+.AccountPage .standardLayout {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-areas:
@@ -80,18 +80,18 @@ a {
     justify-content: space-between;
 }
 
-.standardLayout h2:first-of-type {
+.AccountPage .standardLayout h2:first-of-type {
     grid-area: title;
     margin: 10px;
 }
 
-.required {
+.AccountPage .required {
     grid-area: required;
     margin: 10px;
     color: gray;
 }
 
-.standardLayout input {
+.AccountPage .standardLayout input {
     grid-area: input;
     background-color: lightgray;
     border: 0;
@@ -100,7 +100,7 @@ a {
     min-width: 0;
 }
 
-.twoLayout {
+.AccountPage .twoLayout {
     display: grid;
     grid-template-columns: auto auto;
     grid-template-areas:
@@ -110,12 +110,12 @@ a {
     justify-content: space-between;
 }
 
-.twoLayout h2:first-of-type {
+.AccountPage .twoLayout h2:first-of-type {
     grid-area: title;
     margin: 10px;
 }
 
-.twoLayout input {
+.AccountPage .twoLayout input {
     grid-area: input;
     background-color: lightgray;
     border: 0;
@@ -123,13 +123,13 @@ a {
     margin-bottom: 10px;
 }
 
-.orderSide {
+.AccountPage .orderSide {
     grid-column: 2;
     background-color: pink;
 }
 
 
-.ProfileInformation {
+.AccountPage .ProfileInformation {
     display: grid;
     grid-template-areas:
         "FLName FLName FLName FLName FLName FLName"
@@ -142,42 +142,42 @@ a {
         
 }
 
-.province{
+.AccountPage .province{
     width: 33%;
 }
-.postal{
+.AccountPage .postal{
     width: 33%;
 }
-.country{
+.AccountPage .country{
     width: 33%;
 }
 
-.firstName {
+.AccountPage .firstName {
     width: 50%;
 }
 
-.lastName {
+.AccountPage .lastName {
     width:50%;
 }
 
-.emailDiv {
+.AccountPage .emailDiv {
     grid-area: email;
     min-width:0;
 }
 
 
-.streetAddress {
+.AccountPage .streetAddress {
     grid-area: street;
     min-width:20vw;
 }
 
 
-.currentLocation {
+.AccountPage .currentLocation {
     grid-area: current;
     min-width:0;
 }
 
-#saveButton {
+.AccountPage #saveButton {
     grid-area: save;
     margin-top: 20px;
     margin-right: 6px;
@@ -186,21 +186,21 @@ a {
     display:flex;
 }
 
-#saveButtonBtn{
+.AccountPage #saveButtonBtn{
     width:200px;
     padding:0;
     margin-left: auto;
     height: 30px;
 }
 
-#OrderHistory {
+.AccountPage #OrderHistory {
     font-size: 2rem;
     margin-right: auto;
     margin-left: 15px;
     display: flex;
 }
 
-.orderHistoryToolBar {
+.AccountPage .orderHistoryToolBar {
     border-bottom: solid black 2px;
 }
 
@@ -212,10 +212,10 @@ a {
         flex-direction: column;
     }
 
-    h2 {
+    .AccountPage h2 {
         font-size: .50em;
     }
-    .ProfileInformation {
+    .AccountPage .ProfileInformation {
         display: grid;
         grid-template-areas:
             "FLName FLName FLName FLName FLName FLName"
@@ -226,7 +226,7 @@ a {
             "current current current current current current"
             ". . . save save save";
     }
-    #changePassword{
+    .AccountPage #changePassword{
         font-size: .6em;
     }
 }
