--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -1,13 +1,9 @@
-.body {
-    background-image: none;
-}
-
 .AdminPage {
     font-family: 'Unna', serif;
     font-weight: 400;
 }
 
-.adminMainBody {
+.AdminPage .adminMainBody {
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-areas:
@@ -15,13 +11,13 @@
     height: 100vh;
 }
 
-.restaurants {
+.AdminPage .restaurants {
     grid-area: restaurants;
     background: #FCFCFC;
     margin: 1em;
 }
 
-.restaurantsList ul {
+.AdminPage .restaurantsList ul {
     list-style: none;
     color: #000000;
     display: flex;
@@ -30,7 +26,7 @@
     height: 50vh;
 }
 
-.restaurantSection {
+.AdminPage .restaurantSection {
     grid-area: restaurantInfo;
     background: #FCFCFC;
     margin: 1em;
@@ -43,13 +39,13 @@
     height: 100vh;
 }
 
-.menuItems {
+.AdminPage .menuItems {
     grid-area: menuItems;
     height: 100%;
     overflow: auto;
 }
 
-.menuButtons {
+.AdminPage .menuButtons {
     grid-area: menuButtons;
     border-top: 1px solid #B4B2AF;
     float: right;
@@ -57,7 +53,7 @@
     justify-content: end;
 }
 
-.adminRestaurantBanner {
+.AdminPage .adminRestaurantBanner {
     padding: 2em;
     grid-area: adminRestaurantBanner;
     background-color: #FCFCFC;
@@ -70,16 +66,16 @@
     border-bottom: 1px solid #B4B2AF;
 }
 
-.adminRestaurantBanner * {
+.AdminPage .adminRestaurantBanner * {
     margin: 0;
 }
 
-.restaurant-name{
+.AdminPage .restaurant-name{
     font-weight: bold;
     font-size: 1.25em;
 }
 
-.restaurantImage {
+.AdminPage .restaurantImage {
     grid-area: image;
     height: 150px;
     width: 150px;
@@ -89,7 +85,7 @@
     padding-right: 20px;
 }
 
-.restaurantButtons {
+.AdminPage .restaurantButtons {
     grid-area: buttons;
     top: 50%;
     display: flex;
@@ -97,7 +93,7 @@
     float: right;
 }
 
-.menuButton {
+.AdminPage .menuButton {
     border-radius: 10px;
     margin: 1em;
     padding: 8px;
@@ -107,7 +103,7 @@
     height: 2em;
 }
 
-.restaurantButton {
+.AdminPage .restaurantButton {
     background-color: transparent;
     border: none;
     font-size: 1.25em;
@@ -116,7 +112,7 @@
     margin: 10px;
 }
 
-.menuSearchBar::placeholder {
+.AdminPage .menuSearchBar::placeholder {
     font-family: 'Unna';
     font-weight: 400;
     font-size: 1.5em;
@@ -124,15 +120,15 @@
     padding: 1em;
 }
 
-.restaurantInfo {
+.AdminPage .restaurantInfo {
     font-weight: 200;
 }
 
-.openStatus {
+.AdminPage .openStatus {
     color: #C3EC99;
 }
 
-.firstLine {
+.AdminPage .firstLine {
     font-style: italic;
     font-weight: 700;
     font-size: 20px;
@@ -142,21 +138,21 @@
     align-items: center;
 }
 
-.secondLine {
+.AdminPage .secondLine {
     grid-area: secondline;
     display: flex;
     grid-column-gap: 10px;
     align-items: center;
 }
 
-.thirdLine {
+.AdminPage .thirdLine {
     grid-area: thirdline;
     display: flex;
     grid-column-gap: 10px;
     align-items: center;
     padding-bottom: 10px;
 }
-.restaurantListItem {
+.AdminPage .restaurantListItem {
     font-weight: 500;
     font-size: 24px;
     background-color: transparent;
@@ -164,20 +160,20 @@
     cursor: pointer;
 }
 
-.restaurantHeader {
+.AdminPage .restaurantHeader {
     border-bottom: 1px solid grey;
     display: flex;
     flex-direction: row;
     place-content: space-between;
 }
 
-#restaurantTitle {
+.AdminPage #restaurantTitle {
     padding: 0px 0px 5px 15px;
     font-weight: bold;
     font-size: 1.35em;
 }
 
-.addRestoButton {
+.AdminPage .addRestoButton {
     background-color: transparent;
 
     width: 35px;
@@ -190,20 +186,20 @@
     align-self: center;
 }
 
-.buttonText {
+.AdminPage .buttonText {
     margin-right: 1em;
     cursor: pointer;
 }
 
 /* menu list css */
 
-.menu-list-name {
+.AdminPage .menu-list-name {
     font-weight: 400;
     font-size: 1em;
     line-height: 23px;
 }
 
-.menuListItem {
+.AdminPage .menuListItem {
     background-color: white;
     margin: 1em;
     padding: 1em;
@@ -216,43 +212,43 @@
 
 /* popups css */
 
-.popup-title {
+.AdminPage .popup-title {
     font-weight: bold;
     font-size: 1.25em;
     margin-top: 2em;
     margin-left: 2em;
 }
 
-.popup-submit {
+.AdminPage .popup-submit {
     margin: 1em 3em 2em 1em;
     padding: 8px;
     float: right;
 }
 
-.restaurant-form {
+.AdminPage .restaurant-form {
     width: 90%;
     margin: 0 auto;
     padding: 10px 20px;
 }
 
-.restaurant-form label {
+.AdminPage .restaurant-form label {
     font-weight: 600;
     font-size: 1em;
 }
 
-.restaurant-form input {
+.AdminPage .restaurant-form input {
     background-color: rgb(224, 224, 224);
     border: 1px solid rgb(209, 209, 209);
 }
 
-.delete-confirmation {
+.AdminPage .delete-confirmation {
     margin-left: 2em;
     padding: 1em;
 }
 
 /*Mobile*/
 @media (max-width:425px) {
-    .adminMainBody {
+    .AdminPage .adminMainBody {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
@@ -262,27 +258,27 @@
         width: 100%;
     }
 
-    .restaurants, .restaurantSection, .adminRestaurantBanner, .menuItems, .menuButtons {
+    .AdminPage .restaurants, .restaurantSection, .adminRestaurantBanner, .menuItems, .menuButtons {
         width: 100vw;
         margin: 0;
         padding: 0;
     }
 
-    .restaurantSection {
+    .AdminPage .restaurantSection {
         border-top: 1px solid grey;
     }
 
-    .restaurantsList {
+    .AdminPage .restaurantsList {
         height: 20vh;
         padding-bottom: 1em;
     }
 
-    .restaurantsList ul {
+    .AdminPage .restaurantsList ul {
         height: 100%;
         overflow-y: scroll;
     }
 
-    .adminRestaurantBanner {
+    .AdminPage .adminRestaurantBanner {
         grid-template-areas:
             "firstline"
             "secondline"
@@ -291,18 +287,18 @@
         padding: 2em 0 2em 0;
     }
 
-    .restaurantButtons {
+    .AdminPage .restaurantButtons {
         width: 100vw;
         margin: 0;
     }
 
-    .firstLine, .secondLine, .thirdLine {
+    .AdminPage .firstLine .secondLine .thirdLine {
         line-height: 2em;
         font-size: 1.2em;
         margin-left: 1em;
     }
 
-    .restaurantSection {
+    .AdminPage .restaurantSection {
         grid-template-rows: 1fr 6fr 1fr;
     }
 }
