--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -8,7 +8,7 @@
     width: 100%;
     height: 56px;
     background-color: #033453;
-    border-bottom: solid gray 1px;
+    border-bottom: solid #FFB703 1px;
 }
 
 h1{
