--- a/frontend/src/styles/Admin.css
+++ b/frontend/src/styles/Admin.css
@@ -307,6 +307,7 @@
     background-color: #033453;
     color: white;
     float: right;
+    width: fit-content;
 }
 
 .AdminPage .delete-confirmation {
