--- a/frontend/src/styles/Courier.css
+++ b/frontend/src/styles/Courier.css
@@ -22,6 +22,10 @@
     grid-area: past-orders;
     margin: 2em;
 }
+.courier-page .menuItemsOrdered ol{
+    padding-left:3px;
+    font-size: .8em;
+}
 
 .courier-page .active-container {
     height: 90%;
@@ -58,6 +62,7 @@
     height: 230px;
     border-radius: 15px;
     margin: 1em;
+    overflow-y: auto;
 }
 
 .courier-page .order-logo {
