--- a/frontend/src/styles/Courier.css
+++ b/frontend/src/styles/Courier.css
@@ -1,4 +1,3 @@
-
 .courier-page * {
     font-family: 'Unna', serif;
     font-weight: 400;
@@ -10,17 +9,24 @@
     grid-template-areas:
         "active-orders"
         "past-orders";
+    height: 110vh;
+    background-color: #033453;
+}
+
+.courier-page .order-container {
     height: 100vh;
 }
 
 .courier-page .active-orders {
     grid-area: active-orders;
     margin: 2em 2em 0em 2em;
+    height: 55vh;
 }
 
 .courier-page .past-orders {
     grid-area: past-orders;
     margin: 2em;
+    height: 45vh;
 }
 .courier-page .menuItemsOrdered ol{
     padding-left:3px;
@@ -45,6 +51,7 @@
     margin: 0 0 10px 0;
     font-weight: bold;
     font-size: 25px;
+    color: #ffb703;
 }
 
 .courier-page img {
@@ -83,8 +90,8 @@
 .courier-page .order-buttons {
     grid-area: order-buttons;
     display: flex;
-    align-self: center;
     flex-direction: column;
+    margin: 10px;
 }
 
 .courier-page .status-button, .expand-button{
@@ -141,12 +148,20 @@
         margin: 0 0 1em 0;
     }
 
-    /* .courier-page .order-logo {
-        display: none;
-    } */
-
     .courier-page .order-buttons {
         align-self: flex-end;
         margin: 1em;
+    }
+
+    .courier-page .active-container {
+        grid-template-columns: 1fr;
+    }
+
+    .courier-page .past-container {
+        grid-template-columns: 1fr;
+    }
+
+    .courier-page .order-info {
+        margin-left: 1em;
     }
 }
