--- a/frontend/src/styles/Courier.css
+++ b/frontend/src/styles/Courier.css
@@ -20,13 +20,13 @@
 .courier-page .active-orders {
     grid-area: active-orders;
     margin: 2em 2em 0em 2em;
-    height: 55vh;
+    height: 50vh;
 }
 
 .courier-page .past-orders {
     grid-area: past-orders;
     margin: 2em;
-    height: 45vh;
+    height: 50vh;
 }
 .courier-page .menuItemsOrdered ol{
     padding-left:3px;
@@ -134,6 +134,10 @@
     border-radius: 10px;
 }
 
+.no-active-orders {
+    color: white;
+    font-size: 1.2em;
+}
 /*Mobile*/
 @media (max-width:425px) {
     .courier-page .order-item {
