--- a/frontend/src/styles/OrderHistory.css
+++ b/frontend/src/styles/OrderHistory.css
@@ -1,4 +1,4 @@
-.orderSide{
+.OrderHistoryPage .orderSide{
     display: flex;
     flex-direction: column;
     flex: 1;
@@ -11,19 +11,18 @@
     margin-bottom: 2em;
 }
 
-.orderHistoryToolBar{
+.OrderHistoryPage .orderHistoryToolBar{
     outline: 1px solid #cccccc;
 
 }
 
-#OrderHistory{
+.OrderHistoryPage #OrderHistory{
     display: flex;
     margin: 0 auto;
-    justify-content: center;
 
 }
 
-.orderWrapper{
+.OrderHistoryPage .orderWrapper{
     display: flex;
     margin: 0 auto;
     justify-content: center;
@@ -34,7 +33,7 @@
     border-radius: 10px; 
 }
 
-.orderHeader{
+.OrderHistoryPage .orderHeader{
     display: flex;
     justify-content: left;
     background: #cccccc;
@@ -44,7 +43,7 @@
 
 }
 
-.orderHeader > div{
+.OrderHistoryPage .orderHeader > div{
     display: flex;
     background: #cccccc;
     width: 100%;
@@ -52,21 +51,21 @@
 
 }
 
-.orderDetailsWrapper{
+.OrderHistoryPage .orderDetailsWrapper{
 
     justify-content: center;
     padding: 1em;
 
 }
 
-.outputComponent{
+.OrderHistoryPage .outputComponent{
     display: flex;
     justify-content: center;
     padding: 1em;
 
 }
 
-.buttonWrapper{
+.OrderHistoryPage .buttonWrapper{
     display: flex;
     justify-content: space-evenly;
     padding-left: 1em;
@@ -75,30 +74,53 @@
     
 }
 
-.orderDetails{
+.OrderHistoryPage .orderDetails{
 
     display: flex;
 
 }
 
-.isActive{
+.OrderHistoryPage .isActive{
     display: flex;
 
     justify-content: right;
 }
 
-.restaurantInfo{
+.OrderHistoryPage .restaurantInfo{
     justify-content: left;
     display: flex;
 
 }
 
-.orderWrapper#false{
+.OrderHistoryPage .orderWrapper#false{
     opacity: 0.6;
 }
 
-.backArrow{
+.OrderHistoryPage .backArrow{
     flex: 1;
     align-items: center;
     justify-content: left;
+}
+
+.OrderHistoryPage .backArrow > div{
+    padding: 1em;
+}
+
+.OrderHistoryPage .backArrow > div > a{
+    color: #033453;
+
+}
+
+.OrderHistoryPage .orderHistoryTitle{
+    display: flex;
+    justify-content: center;
+}
+
+.OrderHistoryPage .orderHistoryTitle > h3{
+    flex: 1;
+    width: fit-content;
+}
+
+.OrderHistoryPage .emptyDiv{
+    flex: 1;
 }
