--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -11,7 +11,22 @@
     min-width: 70vw;
     margin-left:auto;
     margin-right:auto;
+    background-color: #033453;
+    
 }
+
+.HomePage {
+    min-height: 100vh;
+    background-color: blue;
+    background-color: #033453;
+    border-top: 1px solid #ffb703;
+}
+
+.HomePage a {
+    text-decoration: none;
+    color: #033453;
+}
+
 @media (max-width: 900px) {
     .home{
         grid-template-areas:
