--- a/frontend/src/styles/RestaurantDetails.css
+++ b/frontend/src/styles/RestaurantDetails.css
@@ -197,6 +197,13 @@
 .RestaurantPage .cart-item {
     list-style: none;
 }
+.remove {
+    height: 20px;
+    margin: 5px;
+}
+.remove:hover {
+    cursor: pointer
+}
 @media (max-width: 900px) {
     .RestaurantPage .mainContentBody {
         display: grid;
